<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015 Bernd Busse
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".gui.MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/input_label_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/input_label_header"
                android:textAppearance="@android:style/TextAppearance.Large" />

            <ImageView
                android:id="@+id/input_divider_header"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_label_header"
                android:contentDescription="@string/input_divider_desc"
                android:scaleType="fitXY"
                android:src="@android:drawable/divider_horizontal_textfield" />

            <TextView
                android:id="@+id/input_label_lasttime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_divider_header"
                android:layout_marginTop="@dimen/element_vertical_margin"
                android:text="@string/input_label_lasttime" />

            <de.busse_apps.hmintpmd.widget.ClearableEditText
                android:id="@+id/input_field_lasttime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_label_lasttime"
                android:drawableEnd="@drawable/ic_action_remove"
                android:drawableRight="@drawable/ic_action_remove"
                android:ems="10"
                android:hint="@string/input_hint_lasttime"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/input_label_masseaten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_field_lasttime"
                android:layout_marginTop="@dimen/element_vertical_margin"
                android:text="@string/input_label_masseaten" />

            <de.busse_apps.hmintpmd.widget.ClearableEditText
                android:id="@+id/input_field_masseaten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_label_masseaten"
                android:drawableEnd="@drawable/ic_action_remove"
                android:drawableRight="@drawable/ic_action_remove"
                android:ems="10"
                android:hint="@string/input_hint_masseaten"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/input_label_bodymass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_field_masseaten"
                android:layout_marginTop="@dimen/element_vertical_margin"
                android:text="@string/input_label_bodymass" />

            <de.busse_apps.hmintpmd.widget.ClearableEditText
                android:id="@+id/input_field_bodymass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/input_label_bodymass"
                android:drawableEnd="@drawable/ic_action_remove"
                android:drawableRight="@drawable/ic_action_remove"
                android:ems="10"
                android:hint="@string/input_hint_bodymass"
                android:inputType="numberDecimal" />
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/input_button_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:text="@string/input_button_calculate" />

</LinearLayout>
