<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2015 Bernd Busse
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:hmintpmd="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartActivity" >

    <TextView
        android:id="@+id/splash_text_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/splash_text_title"
        android:textSize="@dimen/splash_header_size" />

    <de.busse_apps.hmintpmd.widget.CircleMeterView
        android:id="@+id/splash_progress_graph"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        hmintpmd:arc_width="@dimen/splash_graph_arc_width"
        hmintpmd:border_width="@dimen/splash_graph_border_width"
        hmintpmd:color_hi="@color/circle_meter_blue3"
        hmintpmd:color_low="@color/circle_meter_blue1"
        hmintpmd:color_mid="@color/circle_meter_blue2"
        hmintpmd:degree_per_second="@integer/splash_graph_speed" />

    <FrameLayout
        android:id="@+id/splash_banner_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/splash_banner_tv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/splash_banner_start"
            android:textSize="@dimen/splash_value_size" />

        <Button
            android:id="@+id/splash_button_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/splash_button_start"
            android:visibility="invisible" />
    </FrameLayout>

</LinearLayout>
